PiCenter Changelog

1.0.04

Build 100124


1.0.03b
12/22/2019
Build 100123
    Added device methods to backend.
    Better user logging.

12/20/2019
Build 100122
    CSV export now has date strings instead of milliseconds.

1.0.02b
12/16/2019
Build 100121
    Add high/low charts to ui.

1.0.01b
12/14/2019
Build 100120
    Fix camel case chart legend.
    Add drop down chart selector to visual ui page.
    Room summaries computed in separate threads now.
    Pages fill entire viewport.

12/11/2019
Build 100119
    Added TempChart ReChart ui component.
    Added GenericDatePicker react-datepicker ui component.
    Added /data/visual endpoint.

1.0.00a
12/06/2019
Build 100118
    Fixed bug that caused all stats to be zero if missing some readings.

12/03/2019
Build 100117
    Fixed bug that caused CSV file rows to be interlaced with blank lines.
    Added /data/backup endpoint.

12/01/2019
Build 100116
    Added loading modal.
    Added download csv.

11/30/2019
Build 100115
    Change UI color scheme.
    Add react-bootstrap.

11/30/2019
Build 100114
    Add entity cvs parsers.
    Add data/csv endpoint.

11/29/2019
Build 100113
    Fix Create User Page bugs.

11/24/2019
Build 100112
    Add Create User Page.

11/23/2019
Build 100111
    Wrap login input in form.

11/16/2019
Build 100110
    Edit documents.
    Styling.
    First production build.

11/13/2019
Build 100109
    Added Bugs.txt.
    Added GNU AGPL license.
    Fixed logout bugs.
    Added styling.

11/12/2019
Build 100108
    Added summary ui page.
    Added initial sass styling.

11/10/2017
Build 100107
    Invalidate user on http session expiration.
    Added room constants.
    Added summary Service.
    Added summary service test.
    Added truncate table methods to repositories.
    Added /summary rest controller endpoint.

11/08/2019
Build 100106
    Finished login impl.

11/03/2019
Build 100105
    Added ui logonpage tests.

11/02/2019
Build 100104
    Added restuser bean.