@@ -53,6 +53,6 @@
 48. Adjust layout on mobile device.
 49. CSV export has date string instead of millis.#rjojjr
 50. Add device panel UI that uses Spring Rest client it interface with 
-        [PiRest controller](https://github.com/rjojjr/PiScalaRestController).#CURrjojjr
+        [PiRest controller](https://github.com/rjojjr/PiScalaRestController).#rjojjr
 51. Implement [PiRest controller](https://github.com/rjojjr/PiScalaRestController) 
         rest client interface into device service.#rjojjr
