@@ -19,7 +19,7 @@ repositories {
 
 
 group = 'com.kirchnersolutions'
-version = '1.0.04b'
+version = '1.0.04'
 def build = '100124'
 sourceCompatibility = '1.8'
 def PRODUCTION_BUILD = true
