@@ -2,7 +2,7 @@
   "name": "picenter-ui",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://192.168.1.25:7733",
+  "proxy": "https://192.168.1.25:7733",
   "dependencies": {
     "@stomp/stompjs": "^5.4.2",
     "axios": "^0.19.0",
